SyntacticAnalyzer/tests/fail/herencia01.java
class foo extends extends {
// uso de una palabra reservada como identificador
}


